<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAF4C4"
    android:padding="10dp"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context=".Giris">


    <EditText
        android:id="@+id/username1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/İsim" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username1"
        android:layout_marginTop="50dp"
        android:hint="@string/Parola" />

    <Button
        android:id="@+id/btnsignin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password1"
        android:layout_marginTop="50dp"
        android:text="@string/Giriş" />

    <Button
        android:id="@+id/btnsignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnsignin1"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="241dp"
        android:text="@string/ÜyeOl" />

</RelativeLayout>