<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:columnCount="2"
    android:useDefaultMargins="true"
    android:padding="@dimen/padding_grid"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="center_vertical|right"
        android:text="@string/Bot"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:inputType="number"
        android:digits="0123456789"
        android:maxLength="3">
<!--Uygulamayı kaçırdığı zaman imleç bu kısımda olacak-->
        <requestFocus/>
    </EditText>
    <!--Boy kısmındaki boşluğu ayarladığımız yer-->
    <TextView
        android:id="@+id/boy_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:padding="@dimen/padding_tv"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@color/teal_700"
        android:layout_gravity="fill_horizontal"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="center_vertical|right"
        android:text="@string/Kilo"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/kilo_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:text="50 kg"
        android:textSize="16sp" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:progress="20"
        android:layout_gravity="fill_horizontal"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="center_vertical|right"
        android:text="@string/Cinsiyet"
        android:textSize="18sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:id="@+id/radioGrup"
        android:orientation="horizontal"
        android:layout_gravity="fill_horizontal">

        <RadioButton
            android:id="@+id/bay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/bay"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/bayan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/bayan"
            android:textSize="16sp" />
    </RadioGroup>


    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_gravity="center_vertical|right"
        android:text="@string/ideal_kilo"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="18sp" />

<!--İdeal Kilo kısmındaki boşluğu ayarladığımız kısım-->
    <TextView
        android:id="@+id/ideal_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:background="@color/teal_200"
        android:padding="@dimen/padding_ideal_kilo"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="fill_horizontal"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_gravity="center_vertical|right"
        android:text="@string/durum"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/durum_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="1"
        android:background="@color/purple_200"
        android:padding="@dimen/padding_durum"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_gravity="fill_horizontal"/>

    <Space />

    <Button
        android:id="@+id/hesapla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:text="Button"
        android:onClick="guncelle"/>


</GridLayout>